--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="a portfolio site for albert the gator lol">
-    <meta name="author" content="Sergio Puleri">
-    <title>albert the gator</title>
+    <meta name="description" content="a portfolio site for me based off the tutorial lol">
+    <meta name="author" content="Daniel Tymecki">
+    <title>Daniel Tymecki - The Code King!</title>
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -36,7 +36,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">Albert</a>
+              <a class="navbar-brand" href="#">Daniel</a>
             </div>
             <div id="navbar" class="collapse navbar-collapse">
               <ul class="nav navbar-nav">
@@ -50,36 +50,38 @@
 
     <div id="home">
         <div class="container">
-            <h1 class="landing-title"> Hello, World!<span id="cursor">|</span></h1>
-            <img src="img/candid.jpg" class="img-circle img-responsive albert" height="385" width="580" alt="selfie">
+            <h1 class="landing-title"> Welcome to my Website!<span id="cursor">|</span></h1>
+            <img src="img/Portait.jpg" class="img-circle img-responsive albert" height="385" width="580" alt="selfie">
         </div>
     </div>
 	
 	<div id="about" class="container">
 		<div class="page-header">
-			<h1> about me...</h1>
+			<h1> About me...</h1>
 		</div>
 		<p>
-		Hello my name is Albert the Gator, I like to program.</br>
-		Hello my name is Albert the Gator, I like to program.</br>
-		Hello my name is Albert the Gator, I like to program.</br>
-		Hello my name is Albert the Gator, I like to program.</br>
+		Yo my name is Daniel Tymecki and I like to program.</br>
+		I'm still a bit of a novice right now, but I have big goals!</br>
+		So far I have learned Python, C++, and am currently learning HTML and Java.</br>
+		If you have any suggestions, please contact me for I am eager to improve.</br>
 	</div>
 	
 	<div id="work" class="container">
 		<div class="page-header">
 			<h1>Work Experience</h1>
+			<p> So far I have very limited experience, but as I grow this will fill up more.</p>
 		</div>
 		<ul class="list-group">
-		<li class="list-group-item">Lead Dev<span class="badge">1 year</span></a></li>
-		<li class="list-group-item">UF Bookstore<span class="badge">2 years</span></a></li>
-		<li class="list-group-item">MC worker<span class="badge">3 years</span></a></li>
+		<li class="list-group-item">Waiter - Red Lobster<span class="badge">1 year</span></a></li>
+		<li class="list-group-item">Domino's CSR<span class="badge">2 years</span></a></li>
+		<li class="list-group-item">Swagmaster<span class="badge">18 years</span></a></li>
 		</ul>
 	</div>
 	
 	<div id="project" class="container">
 		<div class="page-header">
 			<h1>Projects</h1>
+			<p>These are placeholders until I have some projects to showcase for myself.</p>
 		</div>
 		<!--Bootstrap grid layout-->
       <div class="row">
