--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="a portfolio site for me based off the tutorial lol">
     <meta name="author" content="Daniel Tymecki">
+	<meta name="lang" content="en-us">
+	<meta name="revisit-after" content="30 days">
+	<meta name="robots" content="ALL">
     <title>Daniel Tymecki - The Code King!</title>
 
     <!-- Latest compiled and minified CSS -->
@@ -19,6 +22,9 @@
     <script src="script.js" type="text/javascript"></script>
     <!-- our CSS -->
     <link rel="stylesheet" href="style.css">
+	<link rel="shortcut icon" type="image/ico" href="favicon.ico"  />
+
+
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -50,8 +56,13 @@
 
     <div id="home">
         <div class="container">
-            <h1 class="landing-title"> Welcome to my Website!<span id="cursor">|</span></h1>
+            <h1 class="landing-title"> Hello World!<span id="cursor">|</span></h1>
             <img src="img/Portait.jpg" class="img-circle img-responsive albert" height="385" width="580" alt="selfie">
+			</br></br></br>
+			<audio controls loop>
+				<source src="Reflections.mp3" type="audio/mpeg">
+			</audio>
+			</br></br><p>Enjoy one of my sample tracks as you browse through my website.</p>
         </div>
     </div>
 	
@@ -60,10 +71,12 @@
 			<h1> About me...</h1>
 		</div>
 		<p>
-		Yo my name is Daniel Tymecki and I like to program.</br>
-		I'm still a bit of a novice right now, but I have big goals!</br>
-		So far I have learned Python, C++, and am currently learning HTML and Java.</br>
+		Yo my name is <b>Daniel Tymecki</b> and I like to program.</br>
+		I'm still a bit of a novice <u>right now</u>, but I have big goals!</br>
+		So far I have learned <i>Python, C++, and am currently learning HTML and Java.</i></br>
 		If you have any suggestions, please contact me for I am eager to improve.</br>
+		You can add me on facebook <a href="https://www.facebook.com/dtymecki" target="_blank">here.</a></br>
+		
 	</div>
 	
 	<div id="work" class="container">
@@ -111,7 +124,19 @@
           </p>      
         </div>
 	</div>
-
+	
+	<div id="contact" class="container">
+		<div class="page-header">
+			<h1>Contact Information</h1>
+		</div>
+		<address>
+			Email Address: <a href="mailto:daniel.tymecki@gmail.com">Daniel Tyemcki</a>.
+		</address>
+		<p>
+		I can also be reached on my work cell: <a href="tel:+1-954-549-5039">(954)-549-5039</a></br>
+		You can add me on facebook <a href="https://www.facebook.com/dtymecki" target="_blank">here.</a></br></p>
+		
+	</div>
   </body>
 
   </html>
