--- a/index.html
+++ b/index.html
@@ -7,12 +7,9 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="a portfolio site for me based off the tutorial lol">
     <meta name="author" content="Daniel Tymecki">
-	<meta name="lang" content="en-us">
-	<meta name="revisit-after" content="30 days">
-	<meta name="robots" content="ALL">
-    <title>Daniel Tymecki - The Code King!</title>
+    <title>Daniel Tymecki - Software Developer and Entrepreneur</title>
 
-    <!-- Latest compiled and minified CSS -->
+    <!-- Latest compiled and minimized CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <!-- jQuery JavaScript -->
     <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script> 
@@ -22,61 +19,58 @@
     <script src="script.js" type="text/javascript"></script>
     <!-- our CSS -->
     <link rel="stylesheet" href="style.css">
-	<link rel="shortcut icon" type="image/ico" href="favicon.ico"  />
+    <!-- our PHP -->
+    <link rel="php" href="contact-form-handler.php">  
+	
+	 <!-- Google verification 
+      {% if site.google_verify %}<meta name="google-site-verification" content="{{ site.google_verify }}">{% endif %}
 
-
-
+      <!-- Bing Verification 
+      {% if site.bing_verify %}<meta name="msvalidate.01" content="{{ site.bing_verify }}">{% endif %}
+-->
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body>
-    <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
-              <a class="navbar-brand" href="#">Daniel</a>
-            </div>
-            <div id="navbar" class="collapse navbar-collapse">
-              <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
-              </ul>
-            </div><!--/.nav-collapse -->
-        </div>
-    </nav>
 
-    <div id="home">
-        <div class="container">
-            <h1 class="landing-title"> Hello World!<span id="cursor">|</span></h1>
+  <body>
+  <header>
+      <h1 id="logo" class="logo">DT</h1>
+      <input type="checkbox" id="nav-toggle" class="nav-toggle">
+		<nav>
+			<ul>
+                <li><a href="#home">Home</a></li>
+				<li><a href="#about">About Me</a></li>
+				<li><a href="#work">Skills</a></li>
+				<li><a href="#project">Projects</a></li>
+				<li><a href="#contact">Contact</a></li>
+			</ul>
+		</nav>
+		<label for="nav-toggle" class="nav-toggle-label">
+			<span></span>
+		</label>
+  </header>
+  
+  <div>
+    <div id="home" class="home-section">
+        <div class="start">
+            <h1 class="landing-title"> Welcome to my Website!<span id="cursor">|</span></h1>
             <img src="img/Portait.jpg" class="img-circle img-responsive albert" height="385" width="580" alt="selfie">
-			</br></br></br>
-			<audio controls loop>
-				<source src="Reflections.mp3" type="audio/mpeg">
-			</audio>
-			</br></br><p>Enjoy one of my sample tracks as you browse through my website.</p>
         </div>
     </div>
 	
-	<div id="about" class="container">
+	<div id="about" class="about-section">
 		<div class="page-header">
-			<h1> About me...</h1>
+			<h1>About me...</h1>
 		</div>
 		<p>
-		Yo my name is <b>Daniel Tymecki</b> and I like to program.</br>
-		I'm still a bit of a novice <u>right now</u>, but I have big goals!</br>
-		So far I have learned <i>Python, C++, and am currently learning HTML and Java.</i></br>
-		If you have any suggestions, please contact me for I am eager to improve.</br>
-		You can add me on facebook <a href="https://www.facebook.com/dtymecki" target="_blank">here.</a></br>
-		
+		Yo my name is Daniel Tymecki and I like to program.<br>
+		I'm still a bit of a novice right now, but I have big goals!<br>
+		So far I have learned Python, C++, and am currently learning HTML and Java.<br>
+		If you have any suggestions, please contact me for I am eager to improve.<br>
+        </p>
 	</div>
 	
 	<div id="work" class="container">
@@ -85,9 +79,9 @@
 			<p> So far I have very limited experience, but as I grow this will fill up more.</p>
 		</div>
 		<ul class="list-group">
-		<li class="list-group-item">Waiter - Red Lobster<span class="badge">1 year</span></a></li>
-		<li class="list-group-item">Domino's CSR<span class="badge">2 years</span></a></li>
-		<li class="list-group-item">Swagmaster<span class="badge">18 years</span></a></li>
+		<li class="list-group-item">Waiter - Red Lobster<span class="badge">1 year</span></li>
+		<li class="list-group-item">Domino's CSR<span class="badge">2 years</span></li>
+		<li class="list-group-item">Swagmaster<span class="badge">18 years</span></li>
 		</ul>
 	</div>
 	
@@ -123,20 +117,29 @@
           <p> I developed the TransLoc Rider app for Android. It allows students to track the bus system in Gainesville so they are able to get to class in time! It provides real time bus locations and ETAs. 
           </p>      
         </div>
-	</div>
-	
-	<div id="contact" class="container">
-		<div class="page-header">
-			<h1>Contact Information</h1>
-		</div>
-		<address>
-			Email Address: <a href="mailto:daniel.tymecki@gmail.com">Daniel Tyemcki</a>.
-		</address>
-		<p>
-		I can also be reached on my work cell: <a href="tel:+1-954-549-5039">(954)-549-5039</a></br>
-		You can add me on facebook <a href="https://www.facebook.com/dtymecki" target="_blank">here.</a></br></p>
-		
-	</div>
-  </body>
+      </div>
+    </div>
 
-  </html>
+<div id="contact" class="contact-section"> 
+    <div class="wrapper">
+        <div class="content">
+            <h1>Contact Me</h1>
+            <div class="fields">
+                <form name="contact-form" action="contactform.php" method="post">
+                <input type="text" class="input" name="name" required="required" placeholder="Enter your name here">
+                <input type="text" class="input" name="email" required="required" placeholder="Email">
+                <input type="text" class="input" name="phone" required="required" placeholder="Phone">
+                <input type="text" class="input" name="subject" placeholder="Subject">
+                <div class="msg">
+                    <textarea name="message" required="required" placeholder="Message"></textarea>
+                    <input type="submit" value="Submit" class="btn">
+                </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+      <img src="img/Script_name.PNG">
+      </div>
+  </body>
+ </html>
