Realized the small mistake
Hopefully this can fix it

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- our CSS -->
     <link rel="stylesheet" href="style.css">
     <!-- our PHP -->
-    <link rel="php" href="contact-form-handler.php">  
+    <link rel="php" href="contactform.php">  
 	
 	 <!-- Google verification 
       {% if site.google_verify %}<meta name="google-site-verification" content="{{ site.google_verify }}">{% endif %}
