--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
     <!-- Latest compiled and minimized CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- jQuery JavaScript -->
     <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script> 
     <!-- Latest compiled and minified JavaScript -->
@@ -54,7 +56,7 @@
             <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="light" data-vanity="daniel-tymecki-799711127"><a class="LI-simple-link" href='https://www.linkedin.com/in/daniel-tymecki-799711127?trk=profile-badge'>Daniel Tymecki</a></div>
 		</div>
 		<p>
-		An aspiring software engineer / entrepreneur looking to gain the knowledge I need to ensure a successful future.
+		An aspiring software engineer / entrepreneur looking to gain the knowledge I need to secure a successful future.
         </p>
 	</div>
 	
@@ -106,28 +108,53 @@
     </div>
 
 <div id="contact" class="container"> 
-    <div class="wrapper">
-        <div class="content">
-            <h1>Contact Me</h1>
-            <div class="fields">
-                <form name="contact-form" action="https://formspree.io/daniel.tymecki@gmail.com" method="post">
-                <input type="text" class="input" name="name" required="required" placeholder="Enter your name here">
-                <input type="email" class="input" name="email" required="required" placeholder="Email">
-                <input type="tel" class="input" name="phone" required="required" placeholder="Phone">
-                <input type="text" class="input" name="subject" placeholder="Subject">
-                <div class="msg">
-                    <textarea name="message" required="required" placeholder="Message"></textarea>
-                    <input type="submit" value="Submit" class="btn">
-                </div>
-                </form>
+    <div class="content">
+        <h1>Contact Me</h1>
+        <div class="fields">
+            <form name="contact-form" action="https://formspree.io/daniel.tymecki@gmail.com" method="post">
+            <input type="text" class="input" name="name" required="required" placeholder="Enter your name here">
+            <input type="email" class="input" name="email" required="required" placeholder="Email">
+            <input type="tel" class="input" name="phone" required="required" placeholder="Phone">
+            <input type="text" class="input" name="subject" placeholder="Subject">
+            <div class="msg">
+                <textarea name="message" required="required" placeholder="Message"></textarea>
+                <input type="submit" value="Submit" class="btn">
             </div>
+            </form>
         </div>
     </div>
-    <div class="media-links">
-        <a href="https://www.linkedin.com/in/daniel-tymecki-799711127/" target="_blank" class="li-link"><img src="https://cdn1.iconfinder.com/data/icons/logotypes/32/circle-linkedin-128.png" class="li-img"></a>
-    </div>
 </div>
-      <img src="img/Script_name.PNG">
-      </div>
-  </body>
- </html>
+</div>
+
+    
+     <!-- Footer -->
+          <div class="holder">
+              <footer class="footer">
+                <div class="container-fluid text-center">
+                  <div class="row">
+                    <hr class="clearfix w-100 d-md-none pb-3">
+                          <ul class="foot-ul">
+                                <li><a class="icon" href="https://www.linkedin.com/in/daniel-tymecki-799711127?trk=profile-badge" target="_blank"> <img class= "li-logo" src="img/li-logo.png"> </a></li>
+                                 <li><a class="icon" href="mailto:daniel.tymecki@gmail.com?Subject=Contact" target="_self"> <img class= "li-logo" src="img/gm-logo.png"> </a>
+                                </li>
+                                 <li><a class="icon" href="https://github.com/greenphantom" target="_blank"> <img class= "li-logo" src="img/gh-logo.png"> </a></li>
+                            </ul>
+                            <ul class="foot-ul">
+                                <li><a href="#home">Home</a></li>
+                                <li><a href="#about">About Me</a></li>
+                                <li><a href="#work">Skills</a></li>
+                                <li><a href="#project">Projects</a></li>
+                                <li><a href="#contact">Contact</a></li>
+                          </ul>
+                      </div>
+                  </div>
+                <!-- Copyright -->
+                <div class="footer-copyright text-center py-3">© 2018 Copyright:
+                  Daniel Tymecki
+                </div>
+            </footer>
+
+        </div>
+  <!-- Footer --> 
+</body>
+</html>
